--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^34.1.0",
+    "@ckeditor/ckeditor5-react": "^5.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
+    "@u-wave/react-vimeo": "^0.9.8",
     "axios": "^0.27.2",
+    "draft-js": "^0.11.7",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
