--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
+    "@tinymce/tinymce-react": "^4.1.0",
     "@u-wave/react-vimeo": "^0.9.8",
     "axios": "^0.27.2",
     "draft-js": "^0.11.7",
