--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "axios": "^0.27.2",
     "draft-js": "^0.11.7",
     "next": "12.1.6",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-player": "^2.10.1"
+    "react-player": "^2.10.1",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "17.0.32",
