--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@u-wave/react-vimeo": "^0.9.8",
     "axios": "^0.27.2",
     "draft-js": "^0.11.7",
+    "moment": "^2.29.3",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
