--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.17"
   },
   "devDependencies": {
     "@types/node": "17.0.32",
